# shmoo-rs

./: Cargo.toml  README.md
git-hooks/: commit-msg
shmoo/: Cargo.toml
shmoo-bin/: Cargo.toml
shmoo/src/: lib.rs
src/: lib.rs  main.rs
