[package]
name = "shmoo"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Learning Rust: Project Organization & Tooling - shmoo"
authors = ["Tyler Gillispie <mrteye@gmail.com>"]
documentation = "https://docs.rs/shmoo"
homepage = "https://github.com/mrteye/shmoo-rs"
repository = "https://github.com/mrteye/shmoo-rs"

[dependencies]
rand = "0.8.5"
